--- a/ConnectSpotify/app/build.gradle
+++ b/ConnectSpotify/app/build.gradle
@@ -23,6 +23,7 @@ repositories {
     flatDir {
         dirs 'libs'
     }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -47,4 +48,12 @@ dependencies {
 
     // All other dependencies for your app should also be here:
     compile 'com.android.support:appcompat-v7:26.1.0'
+
+    compile('se.michaelthelin.spotify:spotify-web-api-java:1.5.0') {
+        exclude group: "commons-beanutils", module: "commons-beanutils"
+
+    }
+    compile 'commons-beanutils:commons-beanutils:20030211.134440'
+
+    compile 'com.github.kaaes:spotify-web-api-android:0.4.1'
 }
